--- a/index.html
+++ b/index.html
@@ -248,7 +248,8 @@
             d="m 43.323718,194.57159 c -0.504946,1.92038 0.215309,2.12547 0.934728,2.33173 l 260.272804,-0.047 c 1.32803,-0.45194 3.03083,-0.77519 2.18907,-2.72497"
             id="path1170-6" />
        </g>
-       <a href="#about"> <!--about start-->
+       <!--about start-->
+       <a href="#about"> 
        <g
           id="aboutpressed"
           transform="translate(-64.316234,-23.445327)"
@@ -279,7 +280,6 @@
           id="aboutobj"
           onmouseover="style.opacity = 0;"
           onmouseout="style.opacity = 1;"
-          onclick="open(&quot;https://inkscape.org&quot;,&quot;_blank&quot;);"
           inkscape:export-filename="/Users/harshithadurai/Desktop/laptop.png"
           inkscape:export-xdpi="500"
           inkscape:export-ydpi="500">
@@ -736,7 +736,7 @@
    <div class="middiv2"></div>
 
    <div class="sections-divider"></div>
-   <div class="sections-divider"></div>
+   <div class="sections-divider" id="about"></div>
 
    <!--about start-->
    <div class="about-container">
