--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
    <div class="topdiv">
       <div class="c1">
-         <div class="type">> Hi! I'm <text class="beige-text">Harshitha.</text></div>
+         <div class="type">> Hi! I'm testtt<text class="beige-text">Harshitha.</text></div>
       </div>
       </br>
       <div class="c2">
