--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
    <div class="topdiv">
       <div class="c1">
-         <div class="type">> Hi! I'm test2<text class="beige-text">Harshitha.</text></div>
+         <div class="type">> Hi! I'm <text class="beige-text">Harshitha.</text></div>
       </div>
       </br>
       <div class="c2">
@@ -324,7 +324,9 @@
                 style="font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;font-size:5.64444px;font-family:'Bangla Sangam MN';-inkscape-font-specification:'Bangla Sangam MN Bold';fill:#c65072;fill-opacity:1;stroke-width:0.264583">ABOUT</tspan></tspan></text>
        </g>
        </a>
-       <!--about end-->
+      <!--about end-->
+      <!--skills start-->
+      <a href="#skills">
        <g
           id="skillspressed"
           transform="translate(-3.2437816,67.146133)"
@@ -404,6 +406,9 @@
               y="147.16521"
               style="font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;font-size:5.64444px;font-family:'Bangla Sangam MN';-inkscape-font-specification:'Bangla Sangam MN Bold';fill:#c65072;fill-opacity:1;stroke-width:0.264583">SKILLS</tspan></text>
        </g>
+      </a>
+      <!--projects start-->
+      <a href="#projects">
        <g
           id="projectspressed"
           transform="translate(-21.660374,68.014885)"
@@ -481,6 +486,9 @@
               y="165.26056"
               style="font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;font-size:5.64444px;font-family:'Bangla Sangam MN';-inkscape-font-specification:'Bangla Sangam MN Bold';fill:#c65072;fill-opacity:1;stroke-width:0.264583">PROJECTS</tspan></text>
        </g>
+       </a>
+      <!--experience start-->
+      <a href="#experience">
        <g
           id="experiencepressed"
           transform="translate(-0.06503317,3.5189941)"
@@ -567,6 +575,9 @@
               y="165.03685"
               style="font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;font-size:5.64444px;font-family:'Bangla Sangam MN';-inkscape-font-specification:'Bangla Sangam MN Bold';fill:#c65072;fill-opacity:1;stroke-width:0.264583">EXPERIENCE</tspan></text>
        </g>
+       </a>
+      <!--achievements start-->
+      <a href="#achievements">
        <g
           id="interestspressed"
           transform="translate(-28.32079,96.394049)"
@@ -583,16 +594,16 @@
             id="path1843" />
          <text
             xml:space="preserve"
-            style="font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;font-size:5.64444px;line-height:1.25;font-family:'Bangla Sangam MN';-inkscape-font-specification:'Bangla Sangam MN Bold';letter-spacing:4.49792px;display:inline;opacity:0.82;fill:#c65072;fill-opacity:1;stroke:none;stroke-width:0.264583"
+            style="font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;font-size:5.64444px;line-height:1.25;font-family:'Bangla Sangam MN';-inkscape-font-specification:'Bangla Sangam MN Bold';letter-spacing:2.3px;display:inline;opacity:0.82;fill:#c65072;fill-opacity:1;stroke:none;stroke-width:0.264583"
             x="158.02229"
             y="90.626656"
             id="text1849"
             transform="skewX(-31.173289)"><tspan
               id="tspan1847"
-              x="158.02229"
+              x="156.02229"
               y="90.626656"
-              style="font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;font-size:5.64444px;font-family:'Bangla Sangam MN';-inkscape-font-specification:'Bangla Sangam MN Bold';fill:#c65072;fill-opacity:1;stroke-width:0.264583">INTERESTS</tspan></text>
-       </g>
+              style="font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;font-size:5.64444px;font-family:'Bangla Sangam MN';-inkscape-font-specification:'Bangla Sangam MN Bold';fill:#c65072;fill-opacity:1;stroke-width:0.264583">ACHIEVEMENTS</tspan></text>
+              </g>
        <g
           id="achievementsobj"
           onmouseover="style.opacity = 0;"
@@ -644,6 +655,9 @@
               y="183.29332"
               style="font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;font-size:5.64444px;font-family:'Bangla Sangam MN';-inkscape-font-specification:'Bangla Sangam MN Bold';fill:#c65072;fill-opacity:1;stroke-width:0.264583">ACHIEVEMENTS</tspan></text>
        </g>
+       </a>
+      <!--contact start-->
+      <a href="#contact"> 
        <g
           id="contactpressed"
           transform="translate(24.959758,92.822126)"
@@ -709,6 +723,7 @@
               d="m 93.126892,143.77022 c 0.167923,-0.49754 -4.694842,8.79473 -4.694842,8.79473 l 68.89854,-0.0147 3.29388,-8.78002 c -22.85197,-1.00548 -44.64562,-1.57443 -67.497578,0"
               id="path1026" />
          </g>
+      </a>
          <text
             xml:space="preserve"
             style="display:inline;opacity:0.82;font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;font-size:5.64444000000000035px;line-height:1.25;font-family:'Bangla Sangam MN';-inkscape-font-specification:'Bangla Sangam MN Bold';letter-spacing:4.49791999999999970px;fill:#c65072;fill-opacity:1;stroke:none;stroke-width:0.264583"
@@ -728,7 +743,6 @@
           transform="matrix(0.80384925,0,0,0.80384925,18.355536,2.5557358)" />
      </g>
    </svg>
-   
       <!--svg end-->
    </div>
    
@@ -758,10 +772,9 @@
    <!--about end-->
 
    <div class="sections-divider"></div>
-   <div class="sections-divider"></div>
 
    <!--skills start-->
-   <div class="skills-container">
+   <div class="skills-container" id="skills">
       <div class="title"> <span>> Skills </span> </div>
       <div class="title-reflection"> <span>> Skills </span> </div>
       <div id="skills-subtitle1"> PROGRAMMING LANGUAGES </div>
@@ -804,7 +817,7 @@
    <!--skills end-->
 
    <div class="sections-divider"></div>
-   <div class="sections-divider"></div>
+   <div class="sections-divider" id="projects"></div>
 
    <!--projects start-->
    <div class="projects-container">
@@ -843,9 +856,9 @@
    <div class="sections-divider"></div>
 
    <!--experience start-->
+   <div class="experience-container" id="experience">
    <div class="title"> <span>> Experience </span> </div>
    <div class="title-reflection"> <span>> Experience </span> </div>
-   <div class="experience-container">
       <!--tucows-->
       <div class="exp-item">
          <div class="date">
@@ -910,7 +923,7 @@
    <!--experience end-->
 
    <div class="sections-divider"></div>
-   <div class="sections-divider"></div>
+   <div class="sections-divider" id="achievements"></div>
 
    <!--achievements start-->
    <div class="title"> <span>> Achievements </span> </div>
@@ -941,7 +954,7 @@
    <div class="sections-divider"></div>
 
    <!--contact start-->
-   <div class="projects-container">
+   <div class="projects-container" id="contact">
       <div class="title"> <span>> Contact </span> </div>
       <div class="title-reflection"> <span>> Contact </span> </div>
       <table class="contact">
