--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
       <!--achievements start-->
       <a href="#achievements">
        <g
-          id="interestspressed"
+          id="achievementsspressed"
           transform="translate(-28.32079,96.394049)"
           inkscape:export-filename="/Users/harshithadurai/Desktop/laptop.png"
           inkscape:export-xdpi="500"
@@ -723,7 +723,6 @@
               d="m 93.126892,143.77022 c 0.167923,-0.49754 -4.694842,8.79473 -4.694842,8.79473 l 68.89854,-0.0147 3.29388,-8.78002 c -22.85197,-1.00548 -44.64562,-1.57443 -67.497578,0"
               id="path1026" />
          </g>
-      </a>
          <text
             xml:space="preserve"
             style="display:inline;opacity:0.82;font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;font-size:5.64444000000000035px;line-height:1.25;font-family:'Bangla Sangam MN';-inkscape-font-specification:'Bangla Sangam MN Bold';letter-spacing:4.49791999999999970px;fill:#c65072;fill-opacity:1;stroke:none;stroke-width:0.264583"
@@ -736,12 +735,7 @@
               y="182.69002"
               style="font-style:normal;font-variant:normal;font-weight:bold;font-stretch:normal;font-size:5.64444px;font-family:'Bangla Sangam MN';-inkscape-font-specification:'Bangla Sangam MN Bold';fill:#c65072;fill-opacity:1;stroke-width:0.264583">CONTACT</tspan></text>
        </g>
-       <text
-          xml:space="preserve"
-          id="text1016"
-          style="font-style:normal;font-weight:normal;font-size:10.58329999999999949px;line-height:1.25;font-family:sans-serif;white-space:pre;shape-inside:url(#rect1018);fill:#000000;fill-opacity:1;stroke:none;"
-          transform="matrix(0.80384925,0,0,0.80384925,18.355536,2.5557358)" />
-     </g>
+    </a>
    </svg>
       <!--svg end-->
    </div>
