--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
     
    <!--icons-->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
-
     <title>Harshitha</title>
   </head>
   <body>
@@ -752,13 +749,15 @@
       <div class="title-reflection"><span> > About Me </span></div>
       <div class="info-container">
          <div id="column1"> 
-            I’m a second-year Computer Science Co-op student at the University of Waterloo. 
-            I will be graduating in 2025. I’m interested in developing software to solve real-world problems. 
-            In particular, I have a knack for ____ but am always on the run to learn new technologies and keep myself updated in the tech world. 
-            <br><br>
-            I’m a second-year Computer Science Co-op student at the University of Waterloo. 
-            I will be graduating in 2025. I’m interested in developing software to solve real-world problems. 
-            In particular, I have a knack for ____ but am always on the run to learn new technologies and keep myself updated in the tech world. 
+            Hey there! I’m a second-year <a href="https://uwaterloo.ca/future-students/programs/computer-science">Computer Science</a> Co-op student at the <a href="https://uwaterloo.ca/">University of Waterloo</a>.
+            I’m interested in developing software to solve real-world problems. 
+            I have a knack for coming up with creative, yet practical solutions(that actually work). 
+            Also, I love a good aesthetic with clean design, and try to incorporate it in all of my projects. 
+            <br> <br>
+            I am always on the run to learn new technologies and keep myself updated in the tech world. 
+            In my free time I'm usually hanging out with friends, binge-watching shows, or thinking about the simulation we're in. 
+            I also enjoy playing Chess and Table Tennis.
+            <br>
          </div>
          <div id="column2"> <img src="pic.png" height="280vw"> </div>
       </div>
@@ -777,34 +776,80 @@
             <i class="devicon-cplusplus-plain-wordmark"></i>
          </div>
          <div class="lang-col">
-            <i class="devicon-cplusplus-plain-wordmark"></i>
+            <i class="devicon-python-plain-wordmark"></i>
          </div>
          <div class="lang-col">
-            <i class="devicon-cplusplus-plain-wordmark"></i>
+            <i class="devicon-html5-plain-wordmark"></i>
          </div>
          <div class="lang-col">
-            <i class="devicon-cplusplus-plain-wordmark"></i>
+            <i class="devicon-css3-plain-wordmark"></i>
          </div>
          <div class="lang-col">
-            <i class="devicon-cplusplus-plain-wordmark"></i>
+            <i class="devicon-javascript-plain"></i>
+         </div>
+         <div class="lang-col">
+            <i class="devicon-bash-plain"></i>
+         </div>
+      </div>
+      <div class="lang-row">
+         <div class="lang-col">
+            <text>&emsp;C++</text>
+         </div>
+         <div class="lang-col">
+            <text>Python</text>
+         </div>
+         <div class="lang-col">
+            <text>&ensp;HTML</text>
+         </div>
+         <div class="lang-col">
+            <text>&emsp;CSS</text>
+         </div>
+         <div class="lang-col">
+            <text>Javascript</text>
+         </div>
+         <div class="lang-col">
+            <text>&ensp;Bash</text>
          </div>
       </div>
       <div id="skills-subtitle2"> TOOLS AND TECHNOLOGIES </div>
       <div class="tech-row">
          <div class="tech-col">
-            <i class="devicon-cplusplus-plain-wordmark"></i>
+            <i class="devicon-react-original"></i>
          </div>
          <div class="tech-col">
-            <i class="devicon-cplusplus-plain-wordmark"></i>
+            <i class="devicon-nodejs-plain"></i>
          </div>
          <div class="tech-col">
-            <i class="devicon-cplusplus-plain-wordmark"></i>
+            <i class="devicon-mysql-plain"></i>
          </div>
          <div class="tech-col">
-            <i class="devicon-cplusplus-plain-wordmark"></i>
+            <i class="devicon-postgresql-plain"></i>
          </div>
          <div class="tech-col">
-            <i class="devicon-cplusplus-plain-wordmark"></i>
+            <i class="devicon-linux-plain"></i>
+         </div>
+         <div class="tech-col">
+            <i class="devicon-rstudio-plain"></i>
+         </div>
+      </div>
+      <div class="tech-row">
+         <div class="tech-col">
+            <text>React.js</text>
+         </div>
+         <div class="tech-col">
+            <text>Node.js</text>
+         </div>
+         <div class="tech-col">
+            <text>MySQL</text>
+         </div>
+         <div class="tech-col">
+            <text>PostgreSQL</text>
+         </div>
+         <div class="tech-col">
+            <text>Linux &nbsp;</text>
+         </div>
+         <div class="tech-col">
+            <text>RStudio</text>
          </div>
       </div>
    </div>
