--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
       <div class="title-reflection"><span> > About Me </span></div>
       <div class="info-container">
          <div id="column1"> 
-            Hey there! I’m a second-year <a href="https://uwaterloo.ca/future-students/programs/computer-science">Computer Science</a> Co-op student at the <a href="https://uwaterloo.ca/">University of Waterloo</a>.
+            Hey there! I’m a second-year <a href="https://uwaterloo.ca/future-students/programs/computer-science" target="_blank">Computer Science</a> Co-op student at the <a href="https://uwaterloo.ca/" target="_blank">University of Waterloo</a>.
             I’m interested in developing software to solve real-world problems. 
             I have a knack for coming up with creative, yet practical solutions(that actually work). 
             Also, I love a good aesthetic with clean design, and try to incorporate it in all of my projects. 
@@ -865,8 +865,8 @@
       <div class="proj-row">
          <div class="proj-col">
             <img src="proj1.png">
-            <a href="google.com">
-               <div class="overlay">hiiiihiiiihiiiihiiiihiiiihiiii <br>ahjbf afniu afiuh</div>
+            <a href="https://chrome.google.com/webstore/detail/flash-quiz/fehckcoleckclaheigkefnbeabpeemnc?hl=en" target="_blank">
+               <div class="overlay">Chrome Extension using HTML, CSS, Bootstrap, and JavaScript</div>
             </a>
          </div>
          <div class="proj-col">
