--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="laptop.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="icon.png" type="image/x-icon" />
 
     <!--css and js-->
     <link rel="stylesheet" href="style.css">
@@ -831,6 +831,9 @@
          <div class="tech-col">
             <i class="devicon-rstudio-plain"></i>
          </div>
+         <div class="tech-col">
+            <img src="openstack.png" alt="">
+         </div>
       </div>
       <div class="tech-row">
          <div class="tech-col">
@@ -851,6 +854,9 @@
          <div class="tech-col">
             <text>RStudio</text>
          </div>
+         <div class="tech-col">
+            <text>Openstack</text>
+         </div>
       </div>
    </div>
    <!--skills end-->
@@ -870,21 +876,21 @@
             </a>
          </div>
          <div class="proj-col">
-            <img src="proj1.png">
-            <a href="google.com">
-               <div class="overlay">hiian ajfio aoifj aijafii</div>
+            <img src="github-bg.png">
+            <a href="https://github.com/harshithadurai/grade-tracker-web-app" target="_blank">
+               <div class="overlay">A Web Application using HTML, CSS, JavaScript, and React.js that keeps track of students' grades.</div>
             </a>
          </div>
          <div class="proj-col">
-            <img src="proj1.png">
-            <a href="google.com">
-               <div class="overlay">hiiii</div>
+            <img src="github-bg.png">
+            <a href="https://github.com/harshithadurai/battleships-game" target="_blank">
+               <div class="overlay">A game of Battleships written using C++.</div>
             </a>
          </div>
          <div class="proj-col">
-            <img src="proj1.png">
-            <a href="google.com">
-               <div class="overlay">hiiii</div>
+            <img src="github-bg.png">
+            <a href="https://github.com/harshithadurai/shuffle-game" target="_blank">
+               <div class="overlay">A game of Shuffle written using C++.</div>
             </a>
          </div>
       </div>
@@ -901,10 +907,10 @@
       <!--tucows-->
       <div class="exp-item">
          <div class="date">
-            Jan 2020 - Jan 2020
+            Aug 2021 - Dec 2021
          </div>
          <div class="exp-title">
-            <b>Devops and Database Engineer</b> @ <b>Tucows</b>
+            <b>Jr. Devops and Database Engineer</b> @ <b>Tucows</b>
          </div>
          <div class="exp-content">
             <ul class="exp-list">
@@ -913,48 +919,47 @@
             </ul>
          </div>
       </div>
-      <!--tucows-->
+      <!--ihs-->
       <div class="exp-item item-right">
          <div class="date date-right">
-            Jan 2020 - Jan 2020
+            May 2020 - Aug 2020
          </div>
          <div class="exp-title">
-            <b>Devops and Database Engineer</b> @ <b>Tucows</b>
+            <b>Technology and Innovation Intern</b> @ <b>The Indian High School, Dubai</b>
          </div>
          <div class="exp-content">
             <ul class="exp-list">
-               <li>bj nflke efn qfkln</li>
-               <li>bj nflke efn qfkln</li>
+               <li>Designed UI for an app that created a network for 400+ school alumni, developed using Android Studio</li>
+               <li>Played a key role in incorporating Microsoft Teams to the school’s learning environment, by managing the subscription logistics and conducting online tutorial sessions for more than 800 students</li>
             </ul>
          </div>
       </div>
-      <!--tucows-->
+      <!--facilio-->
       <div class="exp-item">
          <div class="date">
-            Jan 2020 - Jan 2020
+            July 2019 - Aug 2019
          </div>
          <div class="exp-title">
-            <b>Devops and Database Engineer</b> @ <b>Tucows</b>
+            <b>Web Developer</b> @ <b>Facilio Inc.</b>
          </div>
          <div class="exp-content">
             <ul class="exp-list">
-               <li>bj nflke efn qfkln</li>
-               <li>bj nflke efn qfkln</li>
+               <li>Assisted in updating the support section of company’s website using CSS to style the content before deployment</li>
+               <li>Actively participated in group discussions and contributed ideas to improve the styling and layout of the website</li>
             </ul>
          </div>
       </div>
-      <!--tucows-->
+      <!--RTC-->
       <div class="exp-item item-right">
          <div class="date date-right">
-            Jan 2020 - Jan 2020
+            July 2018
          </div>
          <div class="exp-title">
-            <b>Devops and Database Engineer</b> @ <b>Tucows</b>
+            <b>Tech Supporr Intern</b> @ <b>RTC Consultants</b>
          </div>
          <div class="exp-content">
             <ul class="exp-list">
-               <li>bj nflke efn qfkln</li>
-               <li>bj nflke efn qfkln</li>
+               <li>Optimized the company’s data management on Excel by implementing additional macros and improving overall design and structure of the database, resulting in almost 15% improvement in the efficiency of accessing data</li>
             </ul>
          </div>
       </div>
@@ -990,6 +995,8 @@
    </div>
    <!--achievements end-->
 
+   <div class="sections-divider"></div>
+   <div class="sections-divider"></div>
    <div class="sections-divider"></div>
 
    <!--contact start-->
