--- a/index.html
+++ b/index.html
@@ -751,10 +751,10 @@
          <div id="column1"> 
             Hey there! I’m a second-year <a href="https://uwaterloo.ca/future-students/programs/computer-science" target="_blank">Computer Science</a> Co-op student at the <a href="https://uwaterloo.ca/" target="_blank">University of Waterloo</a>.
             I’m interested in developing software to solve real-world problems. 
-            I have a knack for coming up with creative, yet practical solutions(that actually work). 
-            Also, I love a good aesthetic with clean design, and try to incorporate it in all of my projects. 
+            I have a knack for coming up with creative, yet practical solutions. 
+            Also, I love a good aesthetic with clean design and documentation, and try to incorporate it in all of my projects. 
             <br> <br>
-            I am always on the run to learn new technologies and keep myself updated in the tech world. 
+            I'm always on the run to learn new technologies and keep myself updated in the tech world. 
             In my free time I'm usually hanging out with friends, binge-watching shows, or thinking about the simulation we're in. 
             I also enjoy playing Chess and Table Tennis.
             <br>
@@ -914,8 +914,9 @@
          </div>
          <div class="exp-content">
             <ul class="exp-list">
-               <li>bj nflke efn qfkln</li>
-               <li>bj nflke efn qfkln</li>
+               <li>Automated database replication in the cloud using SaltStack and Terraform, reducing manual setup workload by up to 1 hour per use</li>
+               <li>Implemented Transparent Data Encryption in data replication setups with PostgreSQL, resulting in heightened security of cloud instances</li>
+               <li>Integrated cloud instances with monitoring and security tools using Datadog dashboards, tremendously speeding up error-detection and development workflows</li>
             </ul>
          </div>
       </div>
