--- a/index.html
+++ b/index.html
@@ -974,25 +974,26 @@
    <div class="title"> <span>> Achievements </span> </div>
    <div class="title-reflection"> <span>> Achievements </span> </div>
    <div class="achievements-container">
-      <div class="achievements-subtitle">SCORES</div>
-      <table class="scores">
-         <tr>
-            <th>AP Calc BC: <b>5/5</b></th>
-            <th>AP Calc BC: 5/5</th>
-            <th>AP Calc BC: 5/5</th>
-         </tr>
-         <tr>
-            <th>AP Calc BC: 5/5</th>
-            <th>AP Calc BC: 5/5</th>
-            <th>AP Calc BC: 5/5</th>
-         </tr>
-      </table>
       <div class="achievements-subtitle">AWARDS</div>
       <ul class="awards">
          <li>Computer Science Student Upper-Year Scholarship Award, University of Waterloo, 2021</li>
          <li>President’s Scholarship of Distinction, University of Waterloo, 2020</li>
          <li>3rd place in Think Science National Science Fair (United Arab Emirates), 2019</li>
       </ul>
+      <div class="sections-divider"></div>
+      <div class="achievements-subtitle">SCORES</div>
+      <table class="scores">
+         <tr>
+            <th>Current GPA: 91.73%</th>
+            <th>Grade 12: 95.4%</th>
+            <th>Grade 10: 97.2%</th>
+         </tr>
+         <tr>
+            <th>AP Calc BC: 5/5</th>
+            <th>SAT Math: 800/800</th>
+            <th>SAT: 1400/1600</th>
+         </tr>
+      </table>
    </div>
    <!--achievements end-->
 
@@ -1006,7 +1007,7 @@
       <div class="title-reflection"> <span>> Contact </span> </div>
       <table class="contact">
          <tr>
-            <th><i class="devicon-github-original"></i></th>
+            <th><img src="email.png" alt=""></th>
             <th><i class="devicon-github-original"></i></th>
             <th><i class="devicon-linkedin-plain"></i></th>
          </tr>
@@ -1016,7 +1017,7 @@
             <th>LinkedIn</th>
          </tr>
          <tr class="links">
-            <th><a href="hduraiba@uwaterloo.ca" target="_blank">hduraiba@uwaterloo.ca</a></th>
+            <th><a href="mailto:hduraiba@uwaterloo.ca" target="_blank">hduraiba@uwaterloo.ca</a></th>
             <th><a href="https://github.com/harshithadurai"target="_blank">github.com/harshithadurai</a></th>
             <th><a href="https://www.linkedin.com/in/harshitha-durai"target="_blank">linkedin.com/in/harshitha-durai</a></th>
          </tr>
