--- a/index.html
+++ b/index.html
@@ -914,9 +914,9 @@
          </div>
          <div class="exp-content">
             <ul class="exp-list">
-               <li>Automated database replication in the cloud using SaltStack and Terraform, reducing manual setup workload by up to 1 hour per use</li>
+               <li>Automated database replication in the cloud using SaltStack and Terraform</li>
                <li>Implemented Transparent Data Encryption in data replication setups with PostgreSQL, resulting in heightened security of cloud instances</li>
-               <li>Integrated cloud instances with monitoring and security tools using Datadog dashboards, tremendously speeding up error-detection and development workflows</li>
+               <li>Integrated cloud instances with monitoring and security tools using Datadog dashboards</li>
             </ul>
          </div>
       </div>
