--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="shortcut icon" href="icon.png" type="image/x-icon" />
 
-    <!--css and js-->
+    <!--css and js lol-->
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 
