--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="shortcut icon" href="icon.png" type="image/x-icon" />
 
-    <!--css and js lol-->
+    <!--css and js-->
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 
@@ -985,7 +985,7 @@
       <table class="scores">
          <tr>
             <th>Current GPA: 91.73%</th>
-            <th>Grade 12: 95.4%</th>
+            <th>Grade 12: 95.2%</th>
             <th>Grade 10: 97.2%</th>
          </tr>
          <tr>
