--- a/index.html
+++ b/index.html
@@ -1008,8 +1008,8 @@
       <table class="contact">
          <tr>
             <th><img src="email.png" alt=""></th>
-            <th><i class="devicon-github-original"></i></th>
-            <th><i class="devicon-linkedin-plain"></i></th>
+            <th><a href="https://github.com/harshithadurai" target="_blank" class="contact-icons"><i class="devicon-github-original"></i></a></th>
+            <th><a href="https://www.linkedin.com/in/harshitha-durai" target="_blank" class="contact-icons"><i class="devicon-linkedin-plain"></i></a></th>
          </tr>
          <tr>
             <th>Email</th>
