--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!--Linkedin thumbnail-->
+    <meta name="description" content="website" />
+    <meta name="title" property="og:title" content="website" />
+    <meta property="og:type" content="website" />
+    <meta 
+      name="image" 
+      property="og:image" 
+      content="https://www.flickr.com/photos/195565804@N02/52058284323/in/dateposted-public/" />
+    <meta name="description" property="og:description" content="website" />
+    <meta name="author" content="website" />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
