--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta 
       name="image" 
       property="og:image" 
-      content="https://www.flickr.com/photos/195565804@N02/52058284323/in/dateposted-public/" />
-    <meta name="description" property="og:description" content="website" />
-    <meta name="author" content="website" />
+      content="https://www.flickr.com/photos/195565804@N02/52058284323/in/dateposted-public/" 
+      />
+    <meta name="description" property="og:description" content="my personal website" />
+    <meta name="author" content="Harshitha Durai" />
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
