--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <meta name="description" content="website" />
     <meta name="title" property="og:title" content="website" />
     <meta property="og:type" content="website" />
-    <meta 
-      name="image" 
-      property="og:image" 
-      content="https://www.flickr.com/photos/195565804@N02/52058284323/in/dateposted-public/" 
-      />
+    <meta name="image" property="og:image" content="https://www.flickr.com/photos/195565804@N02/52058284323/in/dateposted-public/" />
     <meta name="description" property="og:description" content="my personal website" />
     <meta name="author" content="Harshitha Durai" />
 
