--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!--Linkedin thumbnail-->
-    <meta name="description" content="website" />
-    <meta name="title" property="og:title" content="website" />
-    <meta property="og:type" content="website" />
-    <meta name="image" property="og:image" content="https://www.flickr.com/photos/195565804@N02/52058284323/in/dateposted-public/" />
-    <meta name="description" property="og:description" content="my personal website" />
-    <meta name="author" content="Harshitha Durai" />
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!--Linkedin thumbnail-->
+    <meta property="og:title" content="my website" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://www.flickr.com/photos/195565804@N02/52058284323/in/dateposted-public/" />
+
+        
     <link rel="shortcut icon" href="icon.png" type="image/x-icon" />
 
     <!--css and js-->
