--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--Linkedin thumbnail-->
     <meta property="og:title" content="my website" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://www.flickr.com/photos/195565804@N02/52058284323/in/dateposted-public/" />
+    <meta property="og:image" content="http://www.example.com/thumb.jpg" />
 
         
     <link rel="shortcut icon" href="icon.png" type="image/x-icon" />
