--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--Linkedin thumbnail-->
     <meta property="og:title" content="my website" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://www.w3schools.com/howto/img_forest.jpg" />
+    <meta property="og:image" content="https://live.staticflickr.com/65535/52058284323_fbe5ef7511_k.jpg" />
 
         
     <link rel="shortcut icon" href="icon.png" type="image/x-icon" />
