--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
             July 2018
          </div>
          <div class="exp-title">
-            <b>Tech Supporr Intern</b> @ <b>RTC Consultants</b>
+            <b>Tech Support Intern</b> @ <b>RTC Consultants</b>
          </div>
          <div class="exp-content">
             <ul class="exp-list">
