--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
             I also enjoy playing Chess and Table Tennis.
             <br>
          </div>
-         <div id="column2"> <img src="pic.png" height="280vw"> </div>
+         <div id="column2"> <img src="pic.jpg" height="260vw"> </div>
       </div>
    </div>
    <!--about end-->
