--- a/index.html
+++ b/index.html
@@ -756,9 +756,9 @@
       <div class="title-reflection"><span> > About Me </span></div>
       <div class="info-container">
          <div id="column1"> 
-            Hey there! I’m a second-year <a href="https://uwaterloo.ca/future-students/programs/computer-science" target="_blank">Computer Science</a> Co-op student at the <a href="https://uwaterloo.ca/" target="_blank">University of Waterloo</a>.
+            Hey there! I’m a third-year <a href="https://uwaterloo.ca/future-students/programs/computer-science" target="_blank">Computer Science</a> Co-op student at the <a href="https://uwaterloo.ca/" target="_blank">University of Waterloo</a>.
             I’m interested in developing software to solve real-world problems
-            and have knack for coming up with creative, yet practical solutions. 
+            and have a knack for coming up with creative, yet practical solutions. 
             Also, I love a good aesthetic with clean design and documentation, and try to incorporate it in all of my projects. 
             <br> <br>
             I'm always on the run to learn new technologies and keep myself updated in the tech world. 
