adding coop experience

--- a/index.html
+++ b/index.html
@@ -911,9 +911,25 @@
    <div class="experience-container" id="experience">
    <div class="title"> <span>> Experience </span> </div>
    <div class="title-reflection"> <span>> Experience </span> </div>
-      <!--tucows-->
+      <!--Thomson Reuters-->
       <div class="exp-item">
          <div class="date">
+            May 2022 - Aug 2022
+         </div>
+         <div class="exp-title">
+            <b>Software Developer</b> @ <b>Thomson Reuters</b>
+         </div>
+         <div class="exp-content">
+            <ul class="exp-list">
+               <li>Implemented optimizations to CI/CD pipelines by identifying vulnerabilities in Terraform based code infrastructure</li>
+               <li>Maintained EKS clusters by mounting certificates as secrets and enabling encryption using KMS keys</li>
+               <li>Improved Snowflake query performance by 20% by identifying more efficient resource management strategies</li>
+            </ul>
+         </div>
+      </div>
+      <!--tucows-->
+      <div class="exp-item item-right">
+         <div class="date date-right">
             Aug 2021 - Dec 2021
          </div>
          <div class="exp-title">
@@ -928,8 +944,8 @@
          </div>
       </div>
       <!--ihs-->
-      <div class="exp-item item-right">
-         <div class="date date-right">
+      <div class="exp-item">
+         <div class="date">
             May 2020 - Aug 2020
          </div>
          <div class="exp-title">
@@ -943,8 +959,8 @@
          </div>
       </div>
       <!--facilio-->
-      <div class="exp-item">
-         <div class="date">
+      <div class="exp-item item-right">
+         <div class="date date-right">
             July 2019 - Aug 2019
          </div>
          <div class="exp-title">
@@ -958,8 +974,8 @@
          </div>
       </div>
       <!--RTC-->
-      <div class="exp-item item-right">
-         <div class="date date-right">
+      <div class="exp-item">
+         <div class="date">
             July 2018
          </div>
          <div class="exp-title">
