--- a/index.html
+++ b/index.html
@@ -827,19 +827,19 @@
             <i class="devicon-nodejs-plain"></i>
          </div>
          <div class="tech-col">
-            <i class="devicon-mysql-plain"></i>
-         </div>
-         <div class="tech-col">
-            <i class="devicon-postgresql-plain"></i>
+            <i class="devicon-kubernetes-plain"></i>
          </div>
          <div class="tech-col">
             <i class="devicon-linux-plain"></i>
          </div>
          <div class="tech-col">
-            <i class="devicon-rstudio-plain"></i>
+            <i class="devicon-docker-plain"></i>
          </div>
          <div class="tech-col">
             <img src="openstack.png" alt="">
+         </div>
+         <div class="tech-col">
+            <i class="devicon-postgresql-plain"></i>
          </div>
       </div>
       <div class="tech-row">
@@ -850,19 +850,19 @@
             <text>Node.js</text>
          </div>
          <div class="tech-col">
-            <text>MySQL</text>
-         </div>
-         <div class="tech-col">
-            <text>PostgreSQL</text>
+            <text>Kubernetes</text>
          </div>
          <div class="tech-col">
             <text>Linux &nbsp;</text>
          </div>
          <div class="tech-col">
-            <text>RStudio</text>
+            <text>Docker</text>
          </div>
          <div class="tech-col">
             <text>Openstack</text>
+         </div>
+         <div class="tech-col">
+            <text>PostgreSQL</text>
          </div>
       </div>
    </div>
