--- a/index.html
+++ b/index.html
@@ -911,6 +911,23 @@
    <div class="experience-container" id="experience">
    <div class="title"> <span>> Experience </span> </div>
    <div class="title-reflection"> <span>> Experience </span> </div>
+      <!--PCC-->
+      <div class="exp-item">
+         <div class="date">
+            Jan 2023 - Apr 2023
+         </div>
+         <div class="exp-title">
+            <b>Software Engineer</b> @ <b>Thomson Reuters</b>
+         </div>
+         <div class="exp-content">
+            <ul class="exp-list">
+               <li>Developed custom TypeScript plugin in Backstage.io React app for service tier and lifecycle management of 200+ microservices</li>
+               <li>Integrated Grafana’s HTTP API and Jira’s REST API to automate metadata collection resulting in improved data accuracy</li>
+               <li>Leveraged React components from Material UI to revamp internal Backstage app by enhancing scalability and user experience</li>
+               <li>Utilized Azure to automate creation of a B2C tenant using Terraform, streamlining the process and improving overall efficiency</li>
+            </ul>
+         </div>
+      </div>
       <!--Thomson Reuters-->
       <div class="exp-item">
          <div class="date">
