--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
             Jan 2023 - Apr 2023
          </div>
          <div class="exp-title">
-            <b>Software Engineer</b> @ <b>Thomson Reuters</b>
+            <b>Software Engineer</b> @ <b>PointClickCare</b>
          </div>
          <div class="exp-content">
             <ul class="exp-list">
@@ -929,8 +929,8 @@
          </div>
       </div>
       <!--Thomson Reuters-->
-      <div class="exp-item">
-         <div class="date">
+      <div class="exp-item item-right">
+         <div class="date date-right">
             May 2022 - Aug 2022
          </div>
          <div class="exp-title">
@@ -945,8 +945,8 @@
          </div>
       </div>
       <!--tucows-->
-      <div class="exp-item item-right">
-         <div class="date date-right">
+      <div class="exp-item">
+         <div class="date">
             Aug 2021 - Dec 2021
          </div>
          <div class="exp-title">
@@ -961,8 +961,8 @@
          </div>
       </div>
       <!--ihs-->
-      <div class="exp-item">
-         <div class="date">
+      <div class="exp-item item-right">
+         <div class="date date-right">
             May 2020 - Aug 2020
          </div>
          <div class="exp-title">
@@ -976,8 +976,8 @@
          </div>
       </div>
       <!--facilio-->
-      <div class="exp-item item-right">
-         <div class="date date-right">
+      <div class="exp-item">
+         <div class="date">
             July 2019 - Aug 2019
          </div>
          <div class="exp-title">
@@ -991,8 +991,8 @@
          </div>
       </div>
       <!--RTC-->
-      <div class="exp-item">
-         <div class="date">
+      <div class="exp-item item-right">
+         <div class="date date-right">
             July 2018
          </div>
          <div class="exp-title">
