--- a/index.html
+++ b/index.html
@@ -883,6 +883,12 @@
             </a>
          </div>
          <div class="proj-col">
+            <img src="calpal.png">
+            <a href="https://github.com/harshithadurai/CalPal" target="_blank">
+               <div class="overlay">Python/Flask based Web Application utilizing GPT-3 API by OpenAI to create detailed calendar events</div>
+            </a>
+         </div>
+         <div class="proj-col">
             <img src="github-bg.png">
             <a href="https://github.com/harshithadurai/grade-tracker-web-app" target="_blank">
                <div class="overlay">A Web Application using HTML, CSS, JavaScript, and React.js that keeps track of students' grades.</div>
